--- a/src/layouts/add-info-block/add-info-block.scss
+++ b/src/layouts/add-info-block/add-info-block.scss
@@ -5,4 +5,5 @@
     position: absolute;
     left: calc(243px * var(--scale));
     top: calc(28px * var(--scale));
+    box-shadow: 11px 12px 32px 3px rgba(0, 0, 0, 0.25);
 }
