feat: add lato light font for ru

--- a/src/components/contacts-block/contacts-block.scss
+++ b/src/components/contacts-block/contacts-block.scss
@@ -5,7 +5,7 @@
     margin-left: app.scale(38px);
     color: #3C3C3C;
     font-size: app.scale(8px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 400;
     line-height: app.scale(12px);
@@ -27,7 +27,7 @@
     margin-top: app.scale(5px);
     color: #3C3C3C;
     font-size: app.scale(8px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 400;
     line-height: app.scale(12px);
