--- a/src/components/info-block/info-block.scss
+++ b/src/components/info-block/info-block.scss
@@ -6,7 +6,7 @@
 
 .infoBlock__title {
     color: #042F57;
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 700;
     line-height: app.scale(8.327px);
