--- a/src/components/about-block/about-block.scss
+++ b/src/components/about-block/about-block.scss
@@ -7,7 +7,7 @@
     width: fit-content;
     color: #3C3C3C;
     font-size: app.scale(8.894px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 400;
     line-height: app.scale(10.451px);
