--- a/src/components/add-education-block/add-education-block.scss
+++ b/src/components/add-education-block/add-education-block.scss
@@ -7,7 +7,7 @@
     width: fit-content;
     color: #3C3C3C;
     font-size: app.scale(8.894px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 400;
     line-height: app.scale(10.451px);
@@ -30,7 +30,7 @@
     margin-top: app.scale(5px);
     color: #3C3C3C;
     font-size: app.scale(8px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 400;
     line-height: app.scale(12px);
