--- a/src/components/authorFace/authorFace.scss
+++ b/src/components/authorFace/authorFace.scss
@@ -26,7 +26,7 @@
     color: #00101F;
     text-align: center;
     font-size: app.scale(16px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 800;
     line-height: app.scale(12px);
@@ -41,7 +41,7 @@
     color: #656565;
     text-align: center;
     font-size: app.scale(9px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 600;
     line-height: app.scale(12.435px);
