--- a/src/components/basic-info-block/basic-info-block.scss
+++ b/src/components/basic-info-block/basic-info-block.scss
@@ -18,7 +18,7 @@
     align-items: flex-start;
     color: #3C3C3C;
     font-size: app.scale(8px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 600;
     line-height: app.scale(12px);
