--- a/src/components/skills-block/skills-block.scss
+++ b/src/components/skills-block/skills-block.scss
@@ -4,7 +4,7 @@
     margin-left: app.scale(38px);
     color: #3C3C3C;
     font-size: app.scale(8px);
-    font-family: Poppins;
+    font-family: inherit;
     font-style: normal;
     font-weight: 400;
     line-height: app.scale(12px);
