fix: fix education width bug

--- a/src/components/education-block/education-block.scss
+++ b/src/components/education-block/education-block.scss
@@ -19,7 +19,7 @@
 
 .educationBlock__elem {
     display: grid;
-    grid-template-columns: max-content 100%;
+    grid-template-columns: max-content 1fr;
     grid-template-rows: 1fr;
     column-gap: 20px;
 }
