--- a/src/components/about-block/about-block.scss
+++ b/src/components/about-block/about-block.scss
@@ -6,13 +6,11 @@
     margin-right: app.scale(38px);
     width: fit-content;
     color: #3C3C3C;
-    font-size: app.scale(8.894px);
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 400;
+    font-size: 1.12em;
+    font-weight: app.scaleFontWeight(0);
     line-height: app.scale(10.451px);
 }
 
 .aboutBlock__title {
-    font-size: app.scale(11.117px);
+    font-size: 1.4em;
 }
