--- a/src/components/authorFace/authorFace.scss
+++ b/src/components/authorFace/authorFace.scss
@@ -24,11 +24,8 @@
 
 .authorFace__name {
     color: #00101F;
-    text-align: center;
-    font-size: app.scale(16px);
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 800;
+    font-size: 2em;
+    font-weight: app.scaleFontWeight(400);
     line-height: app.scale(12px);
     letter-spacing: 1.44px;
     margin-top: app.scale(13px);
@@ -39,11 +36,10 @@
     margin-top: app.scale(6px);
     margin-bottom: 0;
     color: #656565;
-    text-align: center;
-    font-size: app.scale(9px);
+    font-size: 1.125em;
     font-family: inherit;
     font-style: normal;
-    font-weight: 600;
+    font-weight: app.scaleFontWeight(200);
     line-height: app.scale(12.435px);
     letter-spacing: app.scale(0.45px);
     text-transform: uppercase;
