--- a/src/components/experience-block/experience-block.scss
+++ b/src/components/experience-block/experience-block.scss
@@ -6,15 +6,13 @@
     margin-right: app.scale(38px);
     width: fit-content;
     color: #3C3C3C;
-    font-size: app.scale(8.894px);
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 400;
+    font-size: 1.12em;
+    font-weight: app.scaleFontWeight(0);
     line-height: app.scale(10.451px);
 }
 
 .experienceBlock__title {
-    font-size: app.scale(11.117px);
+    font-size: 1.4em;
 }
 
 .experienceBlock__link,
@@ -22,9 +20,4 @@
 .experienceBlock__link:visited {
     margin-top: app.scale(5px);
     color: #3C3C3C;
-    font-size: app.scale(8px);
-    font-family: inherit;
-    font-style: normal;
-    font-weight: 400;
-    line-height: app.scale(12px);
 }
