--- a/src/pages/app.scss
+++ b/src/pages/app.scss
@@ -6,6 +6,10 @@
     font-display: swap;
 }
 
+@function scaleFontWeight($size) {
+    @return calc(var(--font-size) + $size);
+}
+
 @function scale($size) {
     @return calc($size * var(--scale));
 }
@@ -37,6 +41,7 @@ body {
     margin: 100px auto 80px auto;
     background-color: #F8F8F8;
     box-shadow: 11px 12px 32px 3px rgba(0, 0, 0, 0.25);
+    font-size: calc(8px * var(--scale));
 }
 
 .wrapper_en {
