--- a/src/components/contacts-block/contacts-block.scss
+++ b/src/components/contacts-block/contacts-block.scss
@@ -1,29 +1,13 @@
 @use '@pages/app.scss' as app;
 
-.contactsBlock {
-    margin-top: app.scale(33px);
-    margin-left: app.scale(38px);
-    color: #3C3C3C;
-    font-size: 1em;
-    font-weight: app.scaleFontWeight(0);
-    line-height: app.scale(12px);
-}
-
-.contactsBlock__title {
-    font-size: 1.25em;
-}
-
 .contactsBlock__elems {
     display: grid;
     grid-template-columns: 120px 120px;
     grid-template-rows: 1fr 1fr 1fr;
 }
 
-.contactsBlock__link,
-.contactsBlock__link:active,
-.contactsBlock__link:visited {
-    margin-top: app.scale(5px);
-    color: #3C3C3C;
+.contactsBlock__link {
+    @include app.addLink();
 }
 
 .contactsBlock__elemContent {
