--- a/src/pages/App/style.scss
+++ b/src/pages/App/style.scss
@@ -50,7 +50,7 @@ body {
     margin: 100px auto 80px auto;
     background-color: #F8F8F8;
     box-shadow: 11px 12px 32px 3px rgba(0, 0, 0, 0.25);
-    font-size: calc(8px * var(--scale));
+    font-size: scale(8px);
 }
 
 .wrapper_en {
