--- a/src/pages/App/style.scss
+++ b/src/pages/App/style.scss
@@ -30,6 +30,8 @@
 html {
     box-sizing: border-box;
     background-color: rgb(203, 203, 216);
+    width: fit-content;
+    height: min-content;
 }
 
 *,
